fix display on mobile

--- a/styles/app.css
+++ b/styles/app.css
@@ -20,6 +20,12 @@
     .btn {
       font-size: 12px;
     }
+    td,th { 
+      font-size: 12px;
+    }
+    input.form-control { 
+      font-size: 12px;
+    }
 }
 
 td.fixed-width {
